--- a/branches/0.9.4/ChangeLog
+++ b/branches/0.9.4/ChangeLog
@@ -47,6 +47,7 @@ Misc plugins
 ~~~~~~~~~~~~
 [*] Shortcuts: fix global shortcuts on X11 Qt-only build.
 [*] LiveJournal: add password recovery URL.
+[-] Weather: fix acquisition of "Chance of Precipitation" value
 [*] Transparent: use KPixmapEffect instead KImageEffect to avoid
     useless QImage <-> QPixmap conversions (should speed up painting
     background a little bit).
