use QLibrary instead of libltdl, merge from trunk rev843,845,854. it may be incomplete, please test

--- a/branches/0.9.4/ChangeLog
+++ b/branches/0.9.4/ChangeLog
@@ -8,8 +8,10 @@ USER-VISIBLE CHANGES IN SIM INSTANT MESSENGER
 
 Core
 ~~~~
-[-] win32: fix (un)setting autostart (bug #9283)
-[-] fix restoring font sizes
+[-] Win32: fix (un)setting autostart (bug #9283).
+[-] Fix restoring font sizes.
+[*] Use QLibrary for plugins instead of libltdl.
+
 
 === SIM 0.9.4.1 (21.10.2006) ===
 
