XEP-0092 version info support, merge from trunk rev 1445, 1454, 1510-1514, 1525-1527, 1530, 1539

--- a/branches/0.9.4/ChangeLog
+++ b/branches/0.9.4/ChangeLog
@@ -12,6 +12,11 @@ Core
 [-] Fix restoring font sizes.
 [*] Use QLibrary for plugins instead of libltdl.
 
+Jabber plugin
+~~~~~~~~~~~~~
+[+] Add support for XEP-0092 client version info requests/replies.
+[*] Show resource as a part of JID in contact tip, not as separate line.
+[*] Remove SIM version from default resource value.
 
 === SIM 0.9.4.1 (21.10.2006) ===
 
