--- a/branches/0.9.4/ChangeLog
+++ b/branches/0.9.4/ChangeLog
@@ -18,6 +18,10 @@ Jabber plugin
 [*] Show resource as a part of JID in contact tip, not as separate line.
 [*] Remove SIM version from default resource value.
 
+Misc plugins
+~~~~~~~~~~~~
+[-] LiveJournal: fix posting messages longer than 4 Kb.
+
 === SIM 0.9.4.1 (21.10.2006) ===
 
 Build system
