little fixes for ru.po

--- a/trunk/po/ru.po
+++ b/trunk/po/ru.po
@@ -1982,9 +1982,8 @@ msgid ""
 msgstr "Модуль добавляет GnuPG шифрование сообщений GPG не найден в PATH"
 
 #: plugins/gpg/gpg.cpp:362 plugins/gpg/gpg.cpp:368
-#, fuzzy
 msgid "Importing public key failed"
-msgstr "Импорт открытого ключа:"
+msgstr "Импорт открытого ключа не удался"
 
 # msgedit.cpp:573
 #: plugins/gpg/gpg.cpp:526 plugins/gpg/gpg.cpp:535
@@ -3665,7 +3664,6 @@ msgid "Low level network error"
 msgstr "Сетевая ошибка"
 
 #: plugins/jabber/jabber_rosters.cpp:2769
-#, fuzzy
 msgid ""
 "Please translate this to short language name like 'ru' or 'de'. Do not "
 "translate this sentence!)"
@@ -6049,9 +6047,8 @@ msgstr "Вход в Yahoo! заблокирован"
 
 # passwddlg.cpp:34 ui/logindlgbase.cpp:55
 #: plugins/yahoo/yahooclient.cpp:372
-#, fuzzy
 msgid "Wrong password"
-msgstr "Забыли пароль?"
+msgstr "Неправильный пароль"
 
 #: plugins/yahoo/yahooclient.cpp:376
 msgid "Your account has been locked"
@@ -10760,614 +10757,4 @@ msgstr "Ошибка инициализации SSL"
 msgid "Custom"
 msgstr "Собственный"
 
-#~ msgid ""
-#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://"
-#~ "messenger.yahoo.com/&.redir_from=MESSENGER"
-#~ msgstr ""
-#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://"
-#~ "messenger.yahoo.com/&.redir_from=MESSENGER"
 
-#~ msgid "http://horoscopes.swirve.com/scope.cgi?Sign=%1"
-#~ msgstr "http://horoscopes.swirve.com/scope.cgi?Sign=%1"
-
-#~ msgid "Dear translator! type this default encoding for your language"
-#~ msgstr "CP 1251"
-
-# #: plugins/weather/weather.cpp:566
-# Please do not erase it, I will need it later
-#~ msgid ""
-#~ "%l<br><br>\n"
-#~ "<b>Current Weather:</b><br>\n"
-#~ "<img src=\"icon:weather%i\"> %c<br>\n"
-#~ "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
-#~ "Humidity: <b>%h</b><br>\n"
-#~ "Chance of Precipitation: <b>%pp%</b><br>\n"
-#~ "Pressure: <b>%p</b> (%q)<br>\n"
-#~ "Wind: <b>%b</b> <b>%w %g</b><br>\n"
-#~ "Visibility: <b>%v</b><br>\n"
-#~ "Dew Point: <b>%d</b><br>\n"
-#~ "Sunrise: %r<br>\n"
-#~ "Sunset: %s<br>\n"
-#~ "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
-#~ "<b>Moonphase: </b>%mp<br>\n"
-#~ "<img src=\"icon:moon%mi\"><br>\n"
-#~ "<br>\n"
-#~ "Updated: %u<br>\n"
-#~ msgstr ""
-#~ "%l<br><br>\n"
-#~ "<b>Текущая погода:</b><br>\n"
-#~ "<img src=\"icon:weather%i\"> %c<br>\n"
-#~ "Температура: <b>%t</b> (по ощущениям <b>%f</b>)<br>\n"
-#~ "Влажность: <b>%h</b><br>\n"
-#~ "Вероятность осадков: <b>%pp%</b><br>\n"
-#~ "Давление: <b>%a мм.рт.ст.</b> (%q)<br>\n"
-#~ "Ветер: <b>%b</b> <b>%x %y</b><br>\n"
-#~ "Видимость: <b>%v</b><br>\n"
-#~ "Точка росы: <b>%d</b><br>\n"
-#~ "Восход: %r<br>\n"
-#~ "Закат: %s<br>\n"
-#~ "Интенсивность ультрафиолетового излучения <b>%ut</b>, равна <b>%ui</b> "
-#~ "(из 11)<br>\n"
-#~ "<b>Фаза Луны: </b>%mp<br>\n"
-#~ "<img src=\"icon:moon%mi\"><br>\n"
-#~ "<br>\n"
-#~ "Обновлено: %u<br>\n"
-
-# libicq/country.cpp:61
-#~ msgid "Taiwanese"
-#~ msgstr "Тайваньский"
-
-#~ msgid ""
-#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content"
-#~ "$/xptroublesignin.htm"
-#~ msgstr ""
-#~ "http://help.microsoft.com/!data/ru_ru/data/messengerv47_xp.its51/$content"
-#~ "$/xptroublesignin.htm"
-
-# themes.cpp:123 themes.cpp:132
-#~ msgid "Metal style"
-#~ msgstr "Металл"
-
-# libicq/country.cpp:40
-#~ msgid "Norwegian Wood"
-#~ msgstr "Норвежский лес"
-
-#~ msgid "Windows XP style"
-#~ msgstr "Стиль XP"
-
-#~ msgid "Cut"
-#~ msgstr "Вырезать"
-
-# ui/fontsetupbase.cpp:142
-#~ msgid "Copy"
-#~ msgstr "Копировать"
-
-# libicq/country.cpp:362
-#~ msgid "Paste"
-#~ msgstr "Вставить"
-
-#~ msgid "Hu&e:"
-#~ msgstr "Яркость:"
-
-# mainwin.cpp:2365 ui/statussetupbase.cpp:79 usertbl.cpp:113
-#~ msgid "&Sat:"
-#~ msgstr "&Насыщенность:"
-
-#~ msgid "&Val:"
-#~ msgstr "Цвет:"
-
-#~ msgid "&Red:"
-#~ msgstr "&Красный:"
-
-# client.cpp:71 libicq/country.cpp:26
-#~ msgid "&Green:"
-#~ msgstr "&Зеленый:"
-
-#~ msgid "Bl&ue:"
-#~ msgstr "&Синий:"
-
-#~ msgid "A&lpha channel:"
-#~ msgstr "&Прозрачность:"
-
-#~ msgid "&Basic colors"
-#~ msgstr "&Основные цвета"
-
-# ui/xosdbase.cpp:127
-#~ msgid "&Custom colors"
-#~ msgstr "&Пользовательские цвета"
-
-#~ msgid "&Define Custom Colors >>"
-#~ msgstr "Оп&ределить пользовательские цвета >>"
-
-#~ msgid "&Add To Custom Colors"
-#~ msgstr "&Добавить в пользовательские цвета"
-
-# chatwnd.cpp:99
-#~ msgid "Select color"
-#~ msgstr "Выберите цвет"
-
-#~ msgid "Copy or Move a File"
-#~ msgstr "Копировать или переместить файл"
-
-# msgview.cpp:814 ui/searchbase.cpp:69 ui/searchbase.cpp:82
-#~ msgid "Read: %1"
-#~ msgstr "Чтение: %1"
-
-#~ msgid "Write: %1"
-#~ msgstr "Запись: %1"
-
-#~ msgid "All files (*)"
-#~ msgstr "Все файлы (*)"
-
-#~ msgid "Size"
-#~ msgstr "Размер"
-
-#~ msgid "Attributes"
-#~ msgstr "Атрибуты"
-
-# passwddlg.cpp:48
-#~ msgid "Look &in:"
-#~ msgstr "Искать &в:"
-
-# ui/maininfobase.cpp:209 ui/searchbase.cpp:216
-#~ msgid "File &name:"
-#~ msgstr "Имя &файла:"
-
-#~ msgid "File &type:"
-#~ msgstr "&Тип файла:"
-
-# mainwin.cpp:2637
-#~ msgid "Back"
-#~ msgstr "Назад"
-
-#~ msgid "One directory up"
-#~ msgstr "На уровень выше"
-
-#~ msgid "Create New Folder"
-#~ msgstr "Создать новый каталог"
-
-#~ msgid "List View"
-#~ msgstr "Список"
-
-#~ msgid "Detail View"
-#~ msgstr "Детали"
-
-#~ msgid "Preview File Info"
-#~ msgstr "Предварительный просмотр"
-
-#~ msgid "Preview File Contents"
-#~ msgstr "Предварительный просмотр"
-
-#~ msgid "Read-write"
-#~ msgstr "Чтение-запись"
-
-#~ msgid "Read-only"
-#~ msgstr "Только чтение"
-
-#~ msgid "Write-only"
-#~ msgstr "Только запись"
-
-# client.cpp:994 mainwin.cpp:2345
-#~ msgid "Inaccessible"
-#~ msgstr "Недоступный"
-
-#~ msgid "Symlink to File"
-#~ msgstr "Ссылка на файл"
-
-#~ msgid "Symlink to Directory"
-#~ msgstr "Ссылка на каталог"
-
-#~ msgid "Symlink to Special"
-#~ msgstr "Ссылка на специальный файл"
-
-#~ msgid "Dir"
-#~ msgstr "Каталог"
-
-#~ msgid "Special"
-#~ msgstr "Специальный"
-
-# ui/changepasswdbase.cpp:77
-#~ msgid "Save as"
-#~ msgstr "Сохранить как"
-
-#~ msgid "&Open"
-#~ msgstr "&Открыть"
-
-#~ msgid "R&eload"
-#~ msgstr "&Обновить"
-
-#~ msgid "Sort by &Name"
-#~ msgstr "Сортировка по &имени"
-
-#~ msgid "Sort by &Size"
-#~ msgstr "Сортировка по &размеру"
-
-#~ msgid "Sort by &Date"
-#~ msgstr "Сортировка по &дате"
-
-# ui/soundsetupbase.cpp:193
-#~ msgid "&Unsorted"
-#~ msgstr "&Не сортировать"
-
-# libicq/country.cpp:351 libicq/country.cpp:436
-#~ msgid "Sort"
-#~ msgstr "Сортировка"
-
-#~ msgid "Show &hidden files"
-#~ msgstr "Показать &скрытые файлы"
-
-# msgedit.cpp:648
-#~ msgid "the file"
-#~ msgstr "файл"
-
-#~ msgid "the directory"
-#~ msgstr "каталог"
-
-#~ msgid "the symlink"
-#~ msgstr "ссылка"
-
-# mainwin.cpp:1948
-#~ msgid "Delete %1"
-#~ msgstr "Удалить \"%1\""
-
-#~ msgid "<qt>Do you really want to delete %1 \"%2\"?</qt>"
-#~ msgstr "<qt>Вы действительно хотите удалить %1 \"%2\"?</qt>"
-
-#~ msgid "New Folder 1"
-#~ msgstr "Новый каталог"
-
-#~ msgid "New Folder"
-#~ msgstr "Новый каталог"
-
-#~ msgid "New Folder %1"
-#~ msgstr "Новый каталог %1"
-
-# sim.cpp:286
-#~ msgid "Find Directory"
-#~ msgstr "Найти каталог"
-
-# sim.cpp:286
-#~ msgid "Directories"
-#~ msgstr "Каталоги"
-
-# monitor.cpp:65
-#~ msgid "Save"
-#~ msgstr "Сохранить"
-
-#~ msgid ""
-#~ "%1\n"
-#~ "File not found.\n"
-#~ "Check path and filename."
-#~ msgstr ""
-#~ "%1\n"
-#~ "Файл не найден.\n"
-#~ "Проверьте путь и имя файла."
-
-#~ msgid "ERROR"
-#~ msgstr "ОШИБКА"
-
-# ui/xosdbase.cpp:151
-#~ msgid "&Font"
-#~ msgstr "&Шрифт"
-
-# themes.cpp:123 themes.cpp:132
-#~ msgid "Font st&yle"
-#~ msgstr "&Стиль шрифта"
-
-#~ msgid "&Size"
-#~ msgstr "&Размер"
-
-#~ msgid "Effects"
-#~ msgstr "&Эффекты"
-
-#~ msgid "Stri&keout"
-#~ msgstr "&Зачёркивание"
-
-# ui/xosdbase.cpp:141
-#~ msgid "&Color"
-#~ msgstr "&Цвет"
-
-#~ msgid "Sample"
-#~ msgstr "Образец"
-
-# ui/generalsecbase.cpp:111 ui/setupdlg.cpp:168
-#~ msgid "Scr&ipt"
-#~ msgstr "Рукоп&исный"
-
-# ui/setupdlgbase.cpp:99
-#~ msgid "Apply"
-#~ msgstr "Применить"
-
-# mainwin.cpp:1717 ui/aboutdlgbase.cpp:131 ui/filetransfer.cpp:156
-# ui/finddlgbase.cpp:66 ui/logindlgbase.cpp:83 ui/proxydlgbase.cpp:55
-# ui/securedlg.cpp:55 ui/userautoreply.cpp:76
-#~ msgid "Close"
-#~ msgstr "Закрыть"
-
-# ui/themesetupbase.cpp:93
-#~ msgid "Select Font"
-#~ msgstr "Выбор шрифта"
-
-#~ msgid ""
-#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ "
-#~ "GUI toolkit from Trolltech. Qt provides single-source portability across "
-#~ "Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of "
-#~ "Unix with X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
-#~ "information.</p>"
-#~ msgstr ""
-#~ "<h3>О Qt</h3><p>SIM использует Qt версии %1, многоплатформенную среду "
-#~ "разработки C++ GUI от Trolltech.</p><p> <tt>http://www.trolltech.com/qt/</"
-#~ "tt> Для дополнительной информации.</p>"
-
-#~ msgid "Help"
-#~ msgstr "Справка"
-
-# ui/maininfo.cpp:41
-#~ msgid "Defaults"
-#~ msgstr "По умолчанию"
-
-# mainwin.cpp:2637
-#~ msgid "< &Back"
-#~ msgstr "< &Назад"
-
-# msgedit.cpp:225
-#~ msgid "&Next >"
-#~ msgstr "&Далее >"
-
-# libicq/country.cpp:22
-#~ msgid "&Finish"
-#~ msgstr "&Готово"
-
-#~ msgid "+"
-#~ msgstr "+"
-
-#~ msgid "F%1"
-#~ msgstr "F%1"
-
-#~ msgid "ctrl"
-#~ msgstr "ctrl"
-
-#~ msgid "shift"
-#~ msgstr "shift"
-
-# libicq/country.cpp:207
-#~ msgid "alt"
-#~ msgstr "alt"
-
-#~ msgid ""
-#~ "Could not rename\n"
-#~ "%1\n"
-#~ "to\n"
-#~ "%2"
-#~ msgstr ""
-#~ "Не могу переименовать\n"
-#~ "%1\n"
-#~ "в\n"
-#~ "%2"
-
-#~ msgid ""
-#~ "Could not open\n"
-#~ "%1"
-#~ msgstr ""
-#~ "Не могу открыть\n"
-#~ "%1"
-
-#~ msgid ""
-#~ "Could not write\n"
-#~ "%1"
-#~ msgstr ""
-#~ "Не могу записать\n"
-#~ "%1"
-
-#~ msgid "Operation stopped by the user"
-#~ msgstr "Операция остановлена"
-
-#~ msgid "(unknown)"
-#~ msgstr "(неизвестно)"
-
-#~ msgid "Host %1 found"
-#~ msgstr "Узел %1 не найден"
-
-# mainwin.cpp:2362
-#~ msgid "Host found"
-#~ msgstr "Узел найден"
-
-#~ msgid "Connected to host %1"
-#~ msgstr "Соединение с узлом %1"
-
-#~ msgid "Connected to host"
-#~ msgstr "Соединение с узлом"
-
-# ui/setupdlg.cpp:139
-#~ msgid "Connection to %1 closed"
-#~ msgstr "Соединение с узлом %1 разорвано"
-
-# ui/setupdlg.cpp:139
-#~ msgid "Login Incorrect"
-#~ msgstr "Неверное имя пользователя"
-
-# ui/keysetupbase.cpp:129 ui/phonebookbase.cpp:102 ui/setupdlgbase.cpp:71
-# ui/userinfobase.cpp:96
-#~ msgid "Col %1"
-#~ msgstr "Столбец %1"
-
-# ui/keysetupbase.cpp:129 ui/phonebookbase.cpp:102 ui/setupdlgbase.cpp:71
-# ui/userinfobase.cpp:96
-#~ msgid "Row %1"
-#~ msgstr "Строка %1"
-
-# libicq/country.cpp:404
-#~ msgid "Undo"
-#~ msgstr "Отменить"
-
-#~ msgid "Redo"
-#~ msgstr "Повторить"
-
-# ui/xosdsetup.cpp:45
-#~ msgid "&Left"
-#~ msgstr "В&лево"
-
-# mainwin.cpp:2625
-#~ msgid "&Right"
-#~ msgstr "В&право"
-
-# monitor.cpp:71
-#~ msgid "&Top"
-#~ msgstr "&Вверх"
-
-# ui/phonebookbase.cpp:80 ui/setupdlg.cpp:133 ui/userinfo.cpp:85
-#~ msgid "&Bottom"
-#~ msgstr "В&низ"
-
-# libicq/country.cpp:372
-#~ msgid "R&estore"
-#~ msgstr "Во&сстановить"
-
-#~ msgid "&Hide"
-#~ msgstr "С&крыть"
-
-#~ msgid "Line Up Toolbars (compact)"
-#~ msgstr "Выровнять панели инструментов"
-
-#~ msgid "Line Up Toolbars (normal)"
-#~ msgstr "Выровнять панели инструментов"
-
-#~ msgid "Paste special..."
-#~ msgstr "Специальная вставка..."
-
-#~ msgid "What's this?"
-#~ msgstr "Что это?"
-
-# ui/logindlgbase.cpp:87
-#~ msgid "&Restore"
-#~ msgstr "Во&сстановить"
-
-# ui/maininfobase.cpp:240
-#~ msgid "&Move"
-#~ msgstr "&Переместить"
-
-#~ msgid "Mi&nimize"
-#~ msgstr "&Свернуть"
-
-#~ msgid "Ma&ximize"
-#~ msgstr "&Распахнуть"
-
-#~ msgid "Minimize"
-#~ msgstr "Свернуть"
-
-#~ msgid "Restore Down"
-#~ msgstr "Восстановить"
-
-#~ msgid "Maximize"
-#~ msgstr "Распахнуть"
-
-# libicq/country.cpp:372
-#~ msgid "Restore Up"
-#~ msgstr "Восстановить"
-
-# ui/soundsetupbase.cpp:193
-#~ msgid "&Use artsd"
-#~ msgstr "&Использовать звуковой сервер"
-
-#~ msgid ""
-#~ "_n: Check invisible\n"
-#~ "%n times check invisible"
-#~ msgstr ""
-#~ "Проверка невидимости\n"
-#~ "Проверка невидимости %n раза\n"
-#~ "Проверка невидимости %n раз"
-
-# client.cpp:994 mainwin.cpp:2345
-#~ msgid "Check invisible"
-#~ msgstr "Проверка &невидимости"
-
-# client.cpp:994 mainwin.cpp:2345
-#~ msgid "Check &invisible"
-#~ msgstr "Проверка &невидимости"
-
-#~ msgid "&All"
-#~ msgstr "Для .&всех"
-
-# control.cpp:189
-#~ msgid "&Only invisible"
-#~ msgstr "Только для &невидимых"
-
-# sim.cpp:279
-#~ msgid "Maintainer"
-#~ msgstr "Автор"
-
-# libicq/country.cpp:274
-#, fuzzy
-#~ msgid "%n day"
-#~ msgstr "Воскресенье"
-
-# msgedit.cpp:648
-#, fuzzy
-#~ msgid "%n file"
-#~ msgstr "Передача файла"
-
-# control.cpp:190
-#, fuzzy
-#~ msgid "WWW-panel message"
-#~ msgstr "&Открыть сообщение"
-
-# ui/maininfobase.cpp:221
-#, fuzzy
-#~ msgid "Email pager message"
-#~ msgstr "EMail Пейджер"
-
-# msgview.cpp:187
-#, fuzzy
-#~ msgid "Contact request"
-#~ msgstr "Запрос списка контактов"
-
-# mainwin.cpp:2362
-#, fuzzy
-#~ msgid "%n contact found"
-#~ msgstr "Нет контактов для отправки"
-
-# msgedit.cpp:211
-#, fuzzy
-#~ msgid "Close after %n second"
-#~ msgstr "&Закрыть после отправки"
-
-# msgview.cpp:159
-#, fuzzy
-#~ msgid "Authorize request"
-#~ msgstr "Запрос &авторизации"
-
-# msgview.cpp:159
-#, fuzzy
-#~ msgid "Authorization granted"
-#~ msgstr "Запрос &авторизации"
-
-# msgview.cpp:159
-#, fuzzy
-#~ msgid "Authorization refused"
-#~ msgstr "Запрос &авторизации"
-
-# mainwin.cpp:2362
-#, fuzzy
-#~ msgid "Add to contacts"
-#~ msgstr "Нет контакта"
-
-#, fuzzy
-#~ msgid "Removed from contacts"
-#~ msgstr "&Удалить из журнала"
-
-#, fuzzy
-#~ msgid "LiveJournal post"
-#~ msgstr "&Запись в живой журнал"
-
-#, fuzzy
-#~ msgid "You have %n unread message"
-#~ msgstr "Вам пришло письмо"
-
-# libicq/country.cpp:406 libicq/country.cpp:452
-#, fuzzy
-#~ msgid "weather"
-#~ msgstr "Погода"
-
-#, fuzzy
-#~ msgid "%n GPG key"
-#~ msgstr "GnuPG ключ"
