--- a/trunk/po/ru.po
+++ b/trunk/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-05 21:12+0100\n"
-"PO-Revision-Date: 2006-08-23 00:55+0600\n"
+"PO-Revision-Date: 2007-02-23 00:01+0500\n"
 "Last-Translator: Andrey Rahmatullin <wrar@altlinux.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -7431,7 +7431,7 @@ msgstr "Оператор:"
 #: rc.cpp:889
 #, no-c-format
 msgid "Hide main window after"
-msgstr "Скрыть главное окно"
+msgstr "Скрыть главное окно после"
 
 # ui/statussetupbase.cpp:131
 #. i18n: file ./plugins/dock/dockcfgbase.ui line 79
